--- a/style.css
+++ b/style.css
@@ -1,35 +1,19 @@
-body, html {
-    height: 100%;
+body {
+  margin: 0;
 }
 
-header {
-  text-align: center;
+canvas {
+  display: block;
+  vertical-align: bottom;
 }
 
-#me h1 {
-  color: #eaeaea;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
-
-#me img {
-  border: 10;
-  border-style: solid;
-  border-color: black;
-  border-radius: 50%;
-}
-
-.bg {
+#particles-js {
+  top: 0px;
+  position: fixed;
+  width: 100%;
   height: 100%;
+  background-color: #000000;
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url("img/background.png");
-}
-
-#about li {
-  list-style-type: none;
-}
-
-#about img:hover {
-    transform: scale(1.2);
+  background-position: 50% 50%;
+  z-index: -1;
 }
