--- a/style.css
+++ b/style.css
@@ -63,9 +63,18 @@ canvas {
 #button_hideshow {
   margin-top: 4px;
   margin-left: 5px;
+  padding-top: 2px;
+  padding-bottom: 3px;
+  color: rgba(200, 200, 200, 1);
+  border: solid;
+  border-radius: 4px;
+  border-width: thin;
+  border-color: rgba(80, 80, 80, 0.6);
+  background-color: rgba(80, 80, 80, 0.6);
 }
 
-.btn-info, .btn-info:hover, .btn-info:active, .btn-info:visited {
-    background-color: rgba(80, 80, 80, 0.6);
-    border-color: rgba(80, 80, 80, 0.6);
+#button_hideshow:hover {
+  color: rgba(255, 255, 255, 1);
+  border-color: rgba(150, 150, 150, 1);
+  background-color: rgba(70, 70, 70, 0.6);
 }
