--- a/style.css
+++ b/style.css
@@ -7,26 +7,33 @@ canvas {
   vertical-align: bottom;
 }
 
+.vertical-center {
+  display: flex;
+  min-height: 100%;
+  min-height: 90vh;
+  align-items: center;
+}
+
 #particles-js {
   top: 0px;
-  position: fixed;
-  width: 100%;
   height: 100%;
+  width: 100%;
+  position: fixed;
   background-color: #000000;
   background-size: cover;
-  background-position: 50% 50%;
-  z-index: -1;
+  z-index: -1000;
 }
 
 #content {
-  margin-top: 5%;
+  height: auto;
   width: 34em;
   padding-top: 1em;
   padding-bottom: 1em;
-  background-color: rgba(25, 25, 25, 0.6);
-  background-opacity: 0.5;
-  border: 2px solid white;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
   border-radius: 100px;
+  background-color: rgba(25, 25, 25, 0.6);
 }
 
 .me{
